Update `FilterChainConfig` with new public auth endpoints and CORS cleanup
- Add `/register` and `/verify/all` to public endpoint matchers.
- Replace redundant CORS configurations with streamlined setup.